指摘された点の修正
